compile_fail_tests/destructure/tuple_destructure.rs
const fn test<T>(wrap: (T,)) -> T {
    wrap.0
}

fn main() {}
